Use exported value of public SSH key to setup SSH with DO

--- a/do-ssh-key.yml
+++ b/do-ssh-key.yml
@@ -6,7 +6,7 @@
           state: present
           command: ssh
           name: fedora
-          ssh_pub_key: "{{ ssh_public_key }}"
+          ssh_pub_key: $SSH_PUB_KEY
         register: ssh_key_id
 
       - debug:
